Genomonのsummary機能追加に対応

--- a/genomon_post_analysis.cfg
+++ b/genomon_post_analysis.cfg
@@ -1,6 +1,6 @@
 # 
-# $Id: genomon_post_analysis.cfg 89 2015-12-11 10:04:49Z aokada $
-# $Rev: 89 $
+# $Id: genomon_post_analysis.cfg 92 2015-12-14 08:06:48Z aokada $
+# $Rev: 92 $
 # 
 
 ###########
@@ -15,6 +15,8 @@ capture_width = 200
 pickup_width = 800
 markdup_bam_suffix = .markdup.bam
 pickup_bam_suffix = .markdup.pickup.bam
+
+# result files's specification
 
 [result_format_mutation]
 sept = \t
@@ -44,6 +46,11 @@ col_pos_pvalue_ebcall =
 col_pos_pvalue_fisher = 
 col_pos_positive = 
 
+[result_format_summary]
+sept = \t
+header = True
+suffix = .tsv
+
 [merge_format_mutation]
 # this option is only available with option 'header = True'
 filters = 
@@ -52,6 +59,10 @@ filters =
 # this option is only available with option 'header = True'
 # for example
 # filters =  {'read_pairs_not_control': ('>=', '0.05'), 'fisher': ('>=', '2')}
+filters = 
+
+[merge_format_sumarry]
+# now specification, summary has no option.
 filters = 
 
 ###########
