pair listがnormalのみのケースに対応

--- a/genomon_post_analysis.cfg
+++ b/genomon_post_analysis.cfg
@@ -1,6 +1,6 @@
 # 
-# $Id: genomon_post_analysis.cfg 92 2015-12-14 08:06:48Z aokada $
-# $Rev: 92 $
+# $Id: genomon_post_analysis.cfg 98 2015-12-15 08:46:50Z aokada $
+# $Rev: 98 $
 # 
 
 ###########
@@ -20,7 +20,7 @@ pickup_bam_suffix = .markdup.pickup.bam
 
 [result_format_mutation]
 sept = \t
-header = False
+header = True
 suffix = _genomon_mutations.result.txt
 
 col_pos_chr1 = 0
