--- a/genomon_post_analysis.cfg
+++ b/genomon_post_analysis.cfg
@@ -1,20 +1,32 @@
 # 
-# $Id: genomon_post_analysis.cfg 98 2015-12-15 08:46:50Z aokada $
-# $Rev: 98 $
+# $Id: genomon_post_analysis.cfg 125 2016-01-14 05:17:49Z aokada $
+# $Rev: 125 $
 # 
 
 ###########
 # post analysis
+[input]
+include_normal = True
+# include_normal = False‚Ì‚Æ‚«‚ÍˆÈ‰º‘S‚Ä–³Œø
 
-[capture]
-use_pickup_bam = True
+mutation_igv = False
+mutation_bam = False
+mutation_merge = False # file is too large.
+
+sv_igv = False
+sv_bam = False
+sv_merge = True
+
+summary_merge = True
+
+[igv]
 capture_max = 100
 capture_width = 200
 
-[pickup]
+[bam]
 pickup_width = 800
-markdup_bam_suffix = .markdup.bam
-pickup_bam_suffix = .markdup.pickup.bam
+input_bam_suffix = .markdup.bam
+output_bam_suffix = .markdup.pickup.bam
 
 # result files's specification
 
@@ -28,10 +40,6 @@ col_pos_start = 1
 col_pos_chr2 = 0
 col_pos_end = 2
 
-col_pos_pvalue_ebcall = 
-col_pos_pvalue_fisher = 
-col_pos_positive = 
-
 [result_format_sv]
 sept = \t
 header = False
@@ -41,10 +49,6 @@ col_pos_chr1 = 0
 col_pos_start = 1
 col_pos_chr2 = 3
 col_pos_end = 4
-
-col_pos_pvalue_ebcall = 
-col_pos_pvalue_fisher = 
-col_pos_positive = 
 
 [result_format_summary]
 sept = \t
@@ -61,19 +65,15 @@ filters =
 # filters =  {'read_pairs_not_control': ('>=', '0.05'), 'fisher': ('>=', '2')}
 filters = 
 
-[merge_format_sumarry]
+[merge_format_summary]
 # now specification, summary has no option.
 filters = 
 
 ###########
 # tools path
 
-[REFERENCE]
-ref_fasta = /home/w3varann/database/GRCh37/GRCh37.fa
-
-[TOOLS]
+[SOFTWARE]
 samtools  = /home/w3varann/tools/samtools-1.2/samtools
 bedtools  = /home/w3varann/tools/bedtools-2.17.0/bin/bedtools
-biobambam = /home/w3varann/tools/biobambam-0.0.191/bin
 
 
