--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 # 
-# $Id: setup.cfg 87 2015-12-11 09:30:30Z aokada $
-# $Rev: 87 $
+# $Id: setup.cfg 123 2016-01-13 09:55:58Z aokada $
+# $Rev: 123 $
 # 
 
 [egg_info]
-tag_build = dev
+tag_build = release
 tag_svn_revision = true
