--- a/genomon_post_analysis.cfg
+++ b/genomon_post_analysis.cfg
@@ -11,7 +11,7 @@ include_normal = True
 
 mutation_igv = False
 mutation_bam = False
-mutation_merge = False # file is too large.
+mutation_merge = False
 
 sv_igv = False
 sv_bam = False
