delete subcommand igv/bam/merge

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 # 
-# $Id: setup.cfg 123 2016-01-13 09:55:58Z aokada $
-# $Rev: 123 $
+# $Id: setup.cfg 132 2016-03-08 08:19:39Z aokada $
+# $Rev: 132 $
 # 
 
 [egg_info]
 tag_build = release
-tag_svn_revision = true
+tag_svn_revision = false
