modify summary merge

--- a/genomon_post_analysis.cfg
+++ b/genomon_post_analysis.cfg
@@ -9,7 +9,7 @@
 # normalサンプルの結果を処理するかどうか
 include_normal = True
 
-# 以下7つはnormalに対してどこまでやるか
+# 以下6つはnormalに対してどこまでやるか
 # include_normal = Falseのときは以下全て無効
 
 mutation_igv = False
@@ -18,9 +18,7 @@ mutation_merge = False
 
 sv_igv = False
 sv_bam = False
-sv_merge = True
-
-summary_merge = True
+sv_merge = False
 
 [igv]
 capture_max = 100
