modify file-merge function

--- a/genomon_post_analysis.cfg
+++ b/genomon_post_analysis.cfg
@@ -1,30 +1,17 @@
 # 
-# $Id: genomon_post_analysis.cfg 130 2016-03-08 08:03:19Z aokada $
-# $Rev: 130 $
+# $Id: genomon_post_analysis.cfg 140 2016-04-13 07:25:15Z aokada $
+# $Rev: 140 $
 # 
 
 ###########
 # post analysis
-[input]
-# normalサンプルの結果を処理するかどうか
-include_normal = True
-
-# 以下6つはnormalに対してどこまでやるか
-# include_normal = Falseのときは以下全て無効
-
-mutation_igv = False
-mutation_bam = False
-mutation_merge = False
-
-sv_igv = False
-sv_bam = False
-sv_merge = False
-
 [igv]
+enable = True
 capture_max = 100
 capture_width = 200
 
 [bam]
+enable = True
 pickup_width = 800
 input_bam_suffix = .markdup.bam
 output_bam_suffix = .markdup.pickup.bam
@@ -35,45 +22,80 @@ output_bam_suffix = .markdup.pickup.bam
 sept = \t
 header = True
 suffix = _genomon_mutations.result.txt
+suffix_filt = _genomon_mutations.result.filt.txt
+comment = #
 
-col_pos_chr1 = 0
-col_pos_start = 1
-col_pos_chr2 = 0
-col_pos_end = 2
+col_chr1 = Chr
+col_start = Start
+col_chr2 = Chr
+col_end = End
 
 [result_format_sv]
 sept = \t
-header = False
+header = True
 suffix = .genomonSV.result.txt
+suffix_filt = .genomonSV.filt.result.txt
+comment = #
 
-col_pos_chr1 = 0
-col_pos_start = 1
-col_pos_chr2 = 3
-col_pos_end = 4
+col_chr1 = Chr_1
+col_start = Pos_1
+col_chr2 = Chr_2
+col_end = Pos_2
 
-[result_format_summary]
+[result_format_qc]
 sept = \t
 header = True
 suffix = .tsv
+comment = #
 
 [merge_format_mutation]
-# this option is only available with option 'header = True'
-filters = 
+lack_column_complement = NA
+include_unfilt = True
+include_unpair = True
+include_unpanel = True
+all_in_one = True
+separate = True
+output_all   = merge_mutation.csv
+output_case1 = merge_mutation_pair_controlpanel.csv
+output_case2 = merge_mutation_pair.csv
+output_case3 = merge_mutation_unpair_controlpanel.csv
+output_case4 = merge_mutation_unpair.csv
+output_filt_all = merge_mutation_filt.csv
+output_filt_case1 = merge_mutation_filt_pair_controlpanel.csv
+output_filt_case2 = merge_mutation_filt_pair.csv
+output_filt_case3 = merge_mutation_filt_unpair_controlpanel.csv
+output_filt_case4 = merge_mutation_filt_unpair.csv
 
 [merge_format_sv]
-# this option is only available with option 'header = True'
-# for example
-# filters =  {'read_pairs_not_control': ('>=', '0.05'), 'fisher': ('>=', '2')}
-filters = 
+lack_column_complement = NA
+include_unfilt = True
+include_unpair = True
+include_unpanel = True
+all_in_one = True
+separate = True
+output_all   = merge_sv.csv
+output_case1 = merge_sv_pair_controlpanel.csv
+output_case2 = merge_sv_pair.csv
+output_case3 = merge_sv_unpair_controlpanel.csv
+output_case4 = merge_sv_unpair.csv
+output_filt_all   = merge_sv_filt.csv
+output_filt_case1 = merge_sv_filt_pair_controlpanel.csv
+output_filt_case2 = merge_sv_filt_pair.csv
+output_filt_case3 = merge_sv_filt_unpair_controlpanel.csv
+output_filt_case4 = merge_sv_filt_unpair.csv
 
-[merge_format_summary]
-# now specification, summary has no option.
-filters = 
+[merge_format_qc]
+lack_column_complement = NA
+include_unfilt = True
+all_in_one = True
+separate = False
+output_all = merge_qc.csv
 
 ###########
-# tools path
+# Stand Alone
 
-[SOFTWARE]
+## Genomonから呼び出されるときは無効
+[tools]
 samtools  = /home/w3varann/tools/samtools-1.2/samtools
 bedtools  = /home/w3varann/tools/bedtools-2.17.0/bin/bedtools
 
