--- a/genomon_post_analysis.cfg
+++ b/genomon_post_analysis.cfg
@@ -21,8 +21,8 @@ output_bam_suffix = .markdup.pickup.bam
 [result_format_mutation]
 sept = \t
 header = True
-suffix = _genomon_mutations.result.txt
-suffix_filt = _genomon_mutations.result.filt.txt
+suffix = .genomon_mutation.result.txt
+suffix_filt = .genomon_mutation.result.filt.txt
 comment = #
 
 col_chr1 = Chr
@@ -34,7 +34,7 @@ col_end = End
 sept = \t
 header = True
 suffix = .genomonSV.result.txt
-suffix_filt = .genomonSV.filt.result.txt
+suffix_filt = .genomonSV.result.filt.txt
 comment = #
 
 col_chr1 = Chr_1
@@ -45,7 +45,7 @@ col_end = Pos_2
 [result_format_qc]
 sept = \t
 header = True
-suffix = .tsv
+suffix = .genomonQC.result.txt
 comment = #
 
 [merge_format_mutation]
