add option of output-format.

--- a/genomon_post_analysis.cfg
+++ b/genomon_post_analysis.cfg
@@ -55,16 +55,17 @@ include_unpair = True
 include_unpanel = True
 all_in_one = True
 separate = True
-output_all   = merge_mutation.csv
-output_case1 = merge_mutation_pair_controlpanel.csv
-output_case2 = merge_mutation_pair.csv
-output_case3 = merge_mutation_unpair_controlpanel.csv
-output_case4 = merge_mutation_unpair.csv
-output_filt_all = merge_mutation_filt.csv
-output_filt_case1 = merge_mutation_filt_pair_controlpanel.csv
-output_filt_case2 = merge_mutation_filt_pair.csv
-output_filt_case3 = merge_mutation_filt_unpair_controlpanel.csv
-output_filt_case4 = merge_mutation_filt_unpair.csv
+sept = \t
+output_all   = merge_mutation.txt
+output_case1 = merge_mutation_pair_controlpanel.txt
+output_case2 = merge_mutation_pair.txt
+output_case3 = merge_mutation_unpair_controlpanel.txt
+output_case4 = merge_mutation_unpair.txt
+output_filt_all = merge_mutation_filt.txt
+output_filt_case1 = merge_mutation_filt_pair_controlpanel.txt
+output_filt_case2 = merge_mutation_filt_pair.txt
+output_filt_case3 = merge_mutation_filt_unpair_controlpanel.txt
+output_filt_case4 = merge_mutation_filt_unpair.txt
 
 [merge_format_sv]
 lack_column_complement = NA
@@ -73,23 +74,25 @@ include_unpair = True
 include_unpanel = True
 all_in_one = True
 separate = True
-output_all   = merge_sv.csv
-output_case1 = merge_sv_pair_controlpanel.csv
-output_case2 = merge_sv_pair.csv
-output_case3 = merge_sv_unpair_controlpanel.csv
-output_case4 = merge_sv_unpair.csv
-output_filt_all   = merge_sv_filt.csv
-output_filt_case1 = merge_sv_filt_pair_controlpanel.csv
-output_filt_case2 = merge_sv_filt_pair.csv
-output_filt_case3 = merge_sv_filt_unpair_controlpanel.csv
-output_filt_case4 = merge_sv_filt_unpair.csv
+sept = \t
+output_all   = merge_sv.txt
+output_case1 = merge_sv_pair_controlpanel.txt
+output_case2 = merge_sv_pair.txt
+output_case3 = merge_sv_unpair_controlpanel.txt
+output_case4 = merge_sv_unpair.txt
+output_filt_all   = merge_sv_filt.txt
+output_filt_case1 = merge_sv_filt_pair_controlpanel.txt
+output_filt_case2 = merge_sv_filt_pair.txt
+output_filt_case3 = merge_sv_filt_unpair_controlpanel.txt
+output_filt_case4 = merge_sv_filt_unpair.txt
 
 [merge_format_qc]
 lack_column_complement = NA
 include_unfilt = True
 all_in_one = True
 separate = False
-output_all = merge_qc.csv
+sept = \t
+output_all = merge_qc.txt
 
 ###########
 # Stand Alone
