--- a/genomon_post_analysis.cfg
+++ b/genomon_post_analysis.cfg
@@ -29,6 +29,9 @@ col_chr1 = Chr
 col_start = Start
 col_chr2 = Chr
 col_end = End
+col_opt_func = Func.refGene
+col_opt_exonic_func = ExonicFunc.refGene
+col_opt_merge_func = Merge_Func
 
 [result_format_sv]
 sept = \t
@@ -56,6 +59,7 @@ include_unpanel = True
 all_in_one = True
 separate = True
 sept = \t
+
 output_all   = merge_mutation.txt
 output_case1 = merge_mutation_pair_controlpanel.txt
 output_case2 = merge_mutation_pair.txt
@@ -66,6 +70,11 @@ output_filt_case1 = merge_mutation_filt_pair_controlpanel.txt
 output_filt_case2 = merge_mutation_filt_pair.txt
 output_filt_case3 = merge_mutation_filt_unpair_controlpanel.txt
 output_filt_case4 = merge_mutation_filt_unpair.txt
+output_dirname_all   = all
+output_dirname_case1 = pair_controlpanel
+output_dirname_case2 = mutation_pair
+output_dirname_case3 = unpair_controlpanel
+output_dirname_case4 = unpair
 
 [merge_format_sv]
 lack_column_complement = NA
@@ -75,6 +84,7 @@ include_unpanel = True
 all_in_one = True
 separate = True
 sept = \t
+
 output_all   = merge_sv.txt
 output_case1 = merge_sv_pair_controlpanel.txt
 output_case2 = merge_sv_pair.txt
@@ -85,6 +95,11 @@ output_filt_case1 = merge_sv_filt_pair_controlpanel.txt
 output_filt_case2 = merge_sv_filt_pair.txt
 output_filt_case3 = merge_sv_filt_unpair_controlpanel.txt
 output_filt_case4 = merge_sv_filt_unpair.txt
+output_dirname_all   = all
+output_dirname_case1 = pair_controlpanel
+output_dirname_case2 = mutation_pair
+output_dirname_case3 = unpair_controlpanel
+output_dirname_case4 = unpair
 
 [merge_format_qc]
 lack_column_complement = NA
