add rna(starqc, fusion)

--- a/genomon_post_analysis.cfg
+++ b/genomon_post_analysis.cfg
@@ -51,6 +51,20 @@ header = True
 suffix = .genomonQC.result.txt
 comment = #
 
+[result_format_fusionfusion]
+sept = \t
+header = False
+suffix = fusion_fusion.result.txt
+comment = #
+
+[result_format_starqc]
+sept = 
+header = False
+suffix = .Log.final.out
+comment = #
+
+# merged files's specification
+
 [merge_format_mutation]
 lack_column_complement = NA
 include_unfilt = True
@@ -108,6 +122,22 @@ all_in_one = True
 separate = False
 sept = \t
 output_all = merge_qc.txt
+
+[merge_format_fusionfusion]
+lack_column_complement = NA
+include_unfilt = True
+all_in_one = True
+separate = False
+sept = \t
+output_all = merge_fusionfusion.txt
+
+[merge_format_starqc]
+lack_column_complement = NA
+include_unfilt = True
+all_in_one = True
+separate = False
+sept = \t
+output_all = merge_starqc.txt
 
 ###########
 # Stand Alone
