modify post-analysis for specification change to fusionfusion.

--- a/genomon_post_analysis.cfg
+++ b/genomon_post_analysis.cfg
@@ -55,6 +55,7 @@ comment = #
 sept = \t
 header = False
 suffix = fusion_fusion.result.txt
+suffix_filt = fusion_fusion.result.filt.txt
 comment = #
 
 [result_format_starqc]
@@ -86,7 +87,7 @@ output_filt_case3 = merge_mutation_filt_unpair_controlpanel.txt
 output_filt_case4 = merge_mutation_filt_unpair.txt
 output_dirname_all   = all
 output_dirname_case1 = pair_controlpanel
-output_dirname_case2 = mutation_pair
+output_dirname_case2 = pair
 output_dirname_case3 = unpair_controlpanel
 output_dirname_case4 = unpair
 
@@ -111,7 +112,7 @@ output_filt_case3 = merge_sv_filt_unpair_controlpanel.txt
 output_filt_case4 = merge_sv_filt_unpair.txt
 output_dirname_all   = all
 output_dirname_case1 = pair_controlpanel
-output_dirname_case2 = mutation_pair
+output_dirname_case2 = pair
 output_dirname_case3 = unpair_controlpanel
 output_dirname_case4 = unpair
 
@@ -126,10 +127,17 @@ output_all = merge_qc.txt
 [merge_format_fusionfusion]
 lack_column_complement = NA
 include_unfilt = True
+include_unpanel = True
 all_in_one = True
-separate = False
+separate = True
 sept = \t
-output_all = merge_fusionfusion.txt
+
+output_all   = merge_fusionfusion.txt
+output_case1 = merge_fusionfusion_pair_controlpanel.txt
+output_case2 = merge_fusionfusion_pair.txt
+output_filt_all   = merge_fusionfusion_filt.txt
+output_filt_case1 = merge_fusionfusion_filt_pair_controlpanel.txt
+output_filt_case2 = merge_fusionfusion_filt_pair.txt
 
 [merge_format_starqc]
 lack_column_complement = NA
@@ -142,7 +150,7 @@ output_all = merge_starqc.txt
 ###########
 # Stand Alone
 
-## Genomonから呼び出されるときは無効
+## Invalid if called from GenomonPipeline
 [tools]
 samtools  = /home/w3varann/tools/samtools-1.2/samtools
 bedtools  = /home/w3varann/tools/bedtools-2.17.0/bin/bedtools
