--- a/genomon_post_analysis.cfg
+++ b/genomon_post_analysis.cfg
@@ -54,8 +54,8 @@ comment = #
 [result_format_fusionfusion]
 sept = \t
 header = False
-suffix = fusion_fusion.result.txt
-suffix_filt = fusion_fusion.result.filt.txt
+suffix = .fusion.fusion.result.txt
+suffix_filt = .fusion.fusion.result.filt.txt
 comment = #
 
 [result_format_starqc]
