--- a/genomon_post_analysis.cfg
+++ b/genomon_post_analysis.cfg
@@ -1,20 +1,39 @@
 # 
-# $Id: genomon_post_analysis.cfg 145 2016-04-18 01:10:29Z aokada $
-# $Rev: 145 $
+# genomon_post_analysis.cfg
 # 
 
-###########
-# post analysis
 [igv]
 enable = True
 capture_max = 100
 capture_width = 200
+
+dirname_all        = all
+dirname_case1      = pair_controlpanel
+dirname_case2      = pair
+dirname_case3      = unpair_controlpanel
+dirname_case4      = unpair
+dirname_filt_all   = filt_all
+dirname_filt_case1 = filt_pair_controlpanel
+dirname_filt_case2 = filt_pair
+dirname_filt_case3 = filt_unpair_controlpanel
+dirname_filt_case4 = filt_unpair
 
 [bam]
 enable = True
 pickup_width = 800
 input_bam_suffix = .markdup.bam
 output_bam_suffix = .markdup.pickup.bam
+
+dirname_all        = all
+dirname_case1      = pair_controlpanel
+dirname_case2      = pair
+dirname_case3      = unpair_controlpanel
+dirname_case4      = unpair
+dirname_filt_all   = filt_all
+dirname_filt_case1 = filt_pair_controlpanel
+dirname_filt_case2 = filt_pair
+dirname_filt_case3 = filt_unpair_controlpanel
+dirname_filt_case4 = filt_unpair
 
 # result files's specification
 
@@ -67,85 +86,86 @@ comment = #
 # merged files's specification
 
 [merge_format_mutation]
+output_all        = True
+output_case1      = True
+output_case2      = True
+output_case3      = True
+output_case4      = True
+output_filt_all   = True
+output_filt_case1 = True
+output_filt_case2 = True
+output_filt_case3 = True
+output_filt_case4 = True
+
 lack_column_complement = NA
-include_unfilt = True
-include_unpair = True
-include_unpanel = True
-all_in_one = True
-separate = True
 sept = \t
 
-output_all   = merge_mutation.txt
-output_case1 = merge_mutation_pair_controlpanel.txt
-output_case2 = merge_mutation_pair.txt
-output_case3 = merge_mutation_unpair_controlpanel.txt
-output_case4 = merge_mutation_unpair.txt
-output_filt_all = merge_mutation_filt.txt
-output_filt_case1 = merge_mutation_filt_pair_controlpanel.txt
-output_filt_case2 = merge_mutation_filt_pair.txt
-output_filt_case3 = merge_mutation_filt_unpair_controlpanel.txt
-output_filt_case4 = merge_mutation_filt_unpair.txt
-output_dirname_all   = all
-output_dirname_case1 = pair_controlpanel
-output_dirname_case2 = pair
-output_dirname_case3 = unpair_controlpanel
-output_dirname_case4 = unpair
+filename_all        = merge_mutation.txt
+filename_case1      = merge_mutation_pair_controlpanel.txt
+filename_case2      = merge_mutation_pair.txt
+filename_case3      = merge_mutation_unpair_controlpanel.txt
+filename_case4      = merge_mutation_unpair.txt
+filename_filt_all   = merge_mutation_filt.txt
+filename_filt_case1 = merge_mutation_filt_pair_controlpanel.txt
+filename_filt_case2 = merge_mutation_filt_pair.txt
+filename_filt_case3 = merge_mutation_filt_unpair_controlpanel.txt
+filename_filt_case4 = merge_mutation_filt_unpair.txt
 
 [merge_format_sv]
+output_all        = True
+output_case1      = True
+output_case2      = True
+output_case3      = True
+output_case4      = True
+output_filt_all   = True
+output_filt_case1 = True
+output_filt_case2 = True
+output_filt_case3 = True
+output_filt_case4 = True
+
 lack_column_complement = NA
-include_unfilt = True
-include_unpair = True
-include_unpanel = True
-all_in_one = True
-separate = True
 sept = \t
 
-output_all   = merge_sv.txt
-output_case1 = merge_sv_pair_controlpanel.txt
-output_case2 = merge_sv_pair.txt
-output_case3 = merge_sv_unpair_controlpanel.txt
-output_case4 = merge_sv_unpair.txt
-output_filt_all   = merge_sv_filt.txt
-output_filt_case1 = merge_sv_filt_pair_controlpanel.txt
-output_filt_case2 = merge_sv_filt_pair.txt
-output_filt_case3 = merge_sv_filt_unpair_controlpanel.txt
-output_filt_case4 = merge_sv_filt_unpair.txt
-output_dirname_all   = all
-output_dirname_case1 = pair_controlpanel
-output_dirname_case2 = pair
-output_dirname_case3 = unpair_controlpanel
-output_dirname_case4 = unpair
+filename_all        = merge_sv.txt
+filename_case1      = merge_sv_pair_controlpanel.txt
+filename_case2      = merge_sv_pair.txt
+filename_case3      = merge_sv_unpair_controlpanel.txt
+filename_case4      = merge_sv_unpair.txt
+filename_filt_all   = merge_sv_filt.txt
+filename_filt_case1 = merge_sv_filt_pair_controlpanel.txt
+filename_filt_case2 = merge_sv_filt_pair.txt
+filename_filt_case3 = merge_sv_filt_unpair_controlpanel.txt
+filename_filt_case4 = merge_sv_filt_unpair.txt
 
 [merge_format_qc]
 lack_column_complement = NA
-include_unfilt = True
-all_in_one = True
-separate = False
 sept = \t
-output_all = merge_qc.txt
+
+filename_all = merge_qc.txt
 
 [merge_format_fusionfusion]
+output_all        = True
+output_case1      = True
+output_case2      = True
+output_filt_all   = True
+output_filt_case1 = True
+output_filt_case2 = True
+
 lack_column_complement = NA
-include_unfilt = True
-include_unpanel = True
-all_in_one = True
-separate = True
 sept = \t
 
-output_all   = merge_fusionfusion.txt
-output_case1 = merge_fusionfusion_unpair_controlpanel.txt
-output_case2 = merge_fusionfusion_unpair.txt
-output_filt_all   = merge_fusionfusion_filt.txt
-output_filt_case1 = merge_fusionfusion_filt_unpair_controlpanel.txt
-output_filt_case2 = merge_fusionfusion_filt_unpair.txt
+filename_all        = merge_fusionfusion.txt
+filename_case1      = merge_fusionfusion_unpair_controlpanel.txt
+filename_case2      = merge_fusionfusion_unpair.txt
+filename_filt_all   = merge_fusionfusion_filt.txt
+filename_filt_case1 = merge_fusionfusion_filt_unpair_controlpanel.txt
+filename_filt_case2 = merge_fusionfusion_filt_unpair.txt
 
 [merge_format_starqc]
 lack_column_complement = NA
-include_unfilt = True
-all_in_one = True
-separate = False
 sept = \t
-output_all = merge_starqc.txt
+
+filename_all = merge_starqc.txt
 
 ###########
 # Stand Alone
@@ -154,5 +174,4 @@ output_all = merge_starqc.txt
 [tools]
 samtools  = /home/w3varann/tools/samtools-1.2/samtools
 bedtools  = /home/w3varann/tools/bedtools-2.17.0/bin/bedtools
-
 
