add submode for igv stand-alone.

--- a/genomon_post_analysis.cfg
+++ b/genomon_post_analysis.cfg
@@ -51,6 +51,7 @@ col_end = End
 col_opt_func = Func.refGene
 col_opt_exonic_func = ExonicFunc.refGene
 col_opt_merge_func = Merge_Func
+col_id = id
 
 [result_format_sv]
 sept = \t
@@ -63,6 +64,7 @@ col_chr1 = Chr_1
 col_start = Pos_1
 col_chr2 = Chr_2
 col_end = Pos_2
+col_id = id
 
 [result_format_qc]
 sept = \t
