--- a/genomon_post_analysis.cfg
+++ b/genomon_post_analysis.cfg
@@ -75,8 +75,8 @@ comment = #
 [result_format_fusionfusion]
 sept = \t
 header = False
-suffix = .fusion.fusion.result.txt
-suffix_filt = .fusion.fusion.result.filt.txt
+suffix = .genomonFusion.result.txt
+suffix_filt = .genomonFusion.result.filt.txt
 comment = #
 
 [result_format_starqc]
