Change section title in configure. Add dir tests. Add function to overwrite configure.

--- a/genomon_post_analysis.cfg
+++ b/genomon_post_analysis.cfg
@@ -7,11 +7,11 @@ enable = True
 capture_max = 100
 capture_width = 200
 
-dirname_all        = all
-dirname_case1      = pair_controlpanel
-dirname_case2      = pair
-dirname_case3      = unpair_controlpanel
-dirname_case4      = unpair
+dirname_raw_all    = all
+dirname_raw_case1  = pair_controlpanel
+dirname_raw_case2  = pair
+dirname_raw_case3  = unpair_controlpanel
+dirname_raw_case4  = unpair
 dirname_filt_all   = filt_all
 dirname_filt_case1 = filt_pair_controlpanel
 dirname_filt_case2 = filt_pair
@@ -24,11 +24,11 @@ pickup_width = 800
 input_bam_suffix = .markdup.bam
 output_bam_suffix = .markdup.pickup.bam
 
-dirname_all        = all
-dirname_case1      = pair_controlpanel
-dirname_case2      = pair
-dirname_case3      = unpair_controlpanel
-dirname_case4      = unpair
+dirname_raw_all    = all
+dirname_raw_case1  = pair_controlpanel
+dirname_raw_case2  = pair
+dirname_raw_case3  = unpair_controlpanel
+dirname_raw_case4  = unpair
 dirname_filt_all   = filt_all
 dirname_filt_case1 = filt_pair_controlpanel
 dirname_filt_case2 = filt_pair
@@ -37,7 +37,7 @@ dirname_filt_case4 = filt_unpair
 
 # result files's specification
 
-[result_format_mutation]
+[input_mutation]
 sept = \t
 header = True
 suffix = .genomon_mutation.result.txt
@@ -53,7 +53,7 @@ col_opt_exonic_func = ExonicFunc.refGene
 col_opt_merge_func = Merge_Func
 col_id = id
 
-[result_format_sv]
+[input_sv]
 sept = \t
 header = True
 suffix = .genomonSV.result.txt
@@ -66,20 +66,20 @@ col_chr2 = Chr_2
 col_end = Pos_2
 col_id = id
 
-[result_format_qc]
+[input_qc]
 sept = \t
 header = True
 suffix = .genomonQC.result.txt
 comment = #
 
-[result_format_fusionfusion]
+[input_fusionfusion]
 sept = \t
 header = False
 suffix = .genomonFusion.result.txt
 suffix_filt = .genomonFusion.result.filt.txt
 comment = #
 
-[result_format_starqc]
+[input_starqc]
 sept = 
 header = False
 suffix = .Log.final.out
@@ -87,12 +87,12 @@ comment = #
 
 # merged files's specification
 
-[merge_format_mutation]
-output_all        = True
-output_case1      = True
-output_case2      = True
-output_case3      = True
-output_case4      = True
+[merge_mutation]
+output_raw_all    = True
+output_raw_case1  = True
+output_raw_case2  = True
+output_raw_case3  = True
+output_raw_case4  = True
 output_filt_all   = True
 output_filt_case1 = True
 output_filt_case2 = True
@@ -102,23 +102,23 @@ output_filt_case4 = True
 lack_column_complement = NA
 sept = \t
 
-filename_all        = merge_mutation.txt
-filename_case1      = merge_mutation_pair_controlpanel.txt
-filename_case2      = merge_mutation_pair.txt
-filename_case3      = merge_mutation_unpair_controlpanel.txt
-filename_case4      = merge_mutation_unpair.txt
+filename_raw_all    = merge_mutation.txt
+filename_raw_case1  = merge_mutation_pair_controlpanel.txt
+filename_raw_case2  = merge_mutation_pair.txt
+filename_raw_case3  = merge_mutation_unpair_controlpanel.txt
+filename_raw_case4  = merge_mutation_unpair.txt
 filename_filt_all   = merge_mutation_filt.txt
 filename_filt_case1 = merge_mutation_filt_pair_controlpanel.txt
 filename_filt_case2 = merge_mutation_filt_pair.txt
 filename_filt_case3 = merge_mutation_filt_unpair_controlpanel.txt
 filename_filt_case4 = merge_mutation_filt_unpair.txt
 
-[merge_format_sv]
-output_all        = True
-output_case1      = True
-output_case2      = True
-output_case3      = True
-output_case4      = True
+[merge_sv]
+output_raw_all    = True
+output_raw_case1  = True
+output_raw_case2  = True
+output_raw_case3  = True
+output_raw_case4  = True
 output_filt_all   = True
 output_filt_case1 = True
 output_filt_case2 = True
@@ -128,27 +128,27 @@ output_filt_case4 = True
 lack_column_complement = NA
 sept = \t
 
-filename_all        = merge_sv.txt
-filename_case1      = merge_sv_pair_controlpanel.txt
-filename_case2      = merge_sv_pair.txt
-filename_case3      = merge_sv_unpair_controlpanel.txt
-filename_case4      = merge_sv_unpair.txt
+filename_raw_all    = merge_sv.txt
+filename_raw_case1  = merge_sv_pair_controlpanel.txt
+filename_raw_case2  = merge_sv_pair.txt
+filename_raw_case3  = merge_sv_unpair_controlpanel.txt
+filename_raw_case4  = merge_sv_unpair.txt
 filename_filt_all   = merge_sv_filt.txt
 filename_filt_case1 = merge_sv_filt_pair_controlpanel.txt
 filename_filt_case2 = merge_sv_filt_pair.txt
 filename_filt_case3 = merge_sv_filt_unpair_controlpanel.txt
 filename_filt_case4 = merge_sv_filt_unpair.txt
 
-[merge_format_qc]
+[merge_qc]
 lack_column_complement = NA
 sept = \t
 
-filename_all = merge_qc.txt
+filename_raw_all = merge_qc.txt
 
-[merge_format_fusionfusion]
-output_all        = True
-output_case1      = True
-output_case2      = True
+[merge_fusionfusion]
+output_raw_all    = True
+output_raw_case1  = True
+output_raw_case2  = True
 output_filt_all   = True
 output_filt_case1 = True
 output_filt_case2 = True
@@ -156,24 +156,26 @@ output_filt_case2 = True
 lack_column_complement = NA
 sept = \t
 
-filename_all        = merge_fusionfusion.txt
-filename_case1      = merge_fusionfusion_unpair_controlpanel.txt
-filename_case2      = merge_fusionfusion_unpair.txt
+filename_raw_all    = merge_fusionfusion.txt
+filename_raw_case1  = merge_fusionfusion_unpair_controlpanel.txt
+filename_raw_case2  = merge_fusionfusion_unpair.txt
 filename_filt_all   = merge_fusionfusion_filt.txt
 filename_filt_case1 = merge_fusionfusion_filt_unpair_controlpanel.txt
 filename_filt_case2 = merge_fusionfusion_filt_unpair.txt
 
-[merge_format_starqc]
+[merge_starqc]
 lack_column_complement = NA
 sept = \t
 
-filename_all = merge_starqc.txt
+filename_raw_all = merge_starqc.txt
 
 ###########
 # Stand Alone
 
 ## Invalid if called from GenomonPipeline
 [tools]
-samtools  = /home/w3varann/tools/samtools-1.2/samtools
-bedtools  = /home/w3varann/tools/bedtools-2.17.0/bin/bedtools
+samtools  = /usr/local/bin/samtools
+bedtools  = /usr/local/bin/bedtools
 
+[develop]
+debug = False
